--- a/Homework-2/css/style.css
+++ b/Homework-2/css/style.css
@@ -4,6 +4,7 @@
 }
 
 body, html {
+  /* width: 100%; */
   height: 100%;
 }
 
@@ -11,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px 20px 0px;
+  padding: 40px 0px 0px;
   box-sizing: border-box;
   background-color: #d6e1fe;
 }
@@ -34,7 +35,6 @@ body {
   flex-direction: column;
   align-items: center;
   flex: 1;
-  width: 100%;
   padding: 10px 50px;
   background-color: white;
 }
@@ -58,6 +58,36 @@ body {
   justify-content: center;
   align-items: space-between;
   padding-top: 20px;
+}
+
+#preloadroot {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 100px;
+  background-color: #d6e1fe;
+  opacity: 0;
+  animation: fadeIn 1s infinite; 
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+} 
+
+.info-container {
+  display: flex;
+  flex: 1;
+  width: 100%;
+}
+
+.loading-text {
+  font-size: calc(14px + 12 * ((100vw - 320px) / 960));
+  font-weight: bold;
+  color: #316fb9;
 }
 
 .resource {
@@ -102,17 +132,20 @@ body {
   justify-content: center;
   align-items: center;
   width: 150px;
+  height: 30px;
   padding: 10px;
   margin: 20px;
   color: black;
   text-align: center;
   text-decoration: none;
+  border-radius: 5px;
   cursor: pointer;
   overflow: hidden;
 }
 
 .source:hover {
-  font-weight: bold;
+  background-color: #98beec;
+  transform: scale(1.2, 1.2);
 }
 
 .info {
@@ -140,3 +173,32 @@ body {
   text-align: end;
   font-size: calc(7px + 8 * ((100vw - 320px) / 960));
 }
+
+#error {
+  position: fixed;
+  top: 210px;
+  right: -230px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: 'center';
+  width: 220px;
+  height: 20px;
+  padding: 5px 5px;
+  background-color: rgb(28, 201, 80);
+  transition: right 1s ease-in-out;
+}
+
+.error-message {
+  font-size: 15px;
+  color: black;
+}
+
+.show {
+  right: 0px !important;
+}
+
+.hide {
+  right: -230px !important;
+}
+
+
