--- a/Homework-9/news-app/src/app/filter-bar/text-filter-group/text-filter-group.component.html
+++ b/Homework-9/news-app/src/app/filter-bar/text-filter-group/text-filter-group.component.html
@@ -1,5 +1,5 @@
   <div class="input-group input-group-sm">
-    <input [(ngModel)]="inputFilter" type="text" class="form-control input-lg" placeholder="Type text here...">
+    <input [(ngModel)]="filterText" type="text" class="form-control input-lg" placeholder="Type text here...">
     <div class="input-group-append">
       <app-button
         [title]="'Filter'"
