--- a/Homework-9/news-app/src/app/pages/main-page/main-page.component.html
+++ b/Homework-9/news-app/src/app/pages/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <p class="title">{{pageSource}}</p>
-<app-filter-panel [userIsLogged]="userIsLogged"></app-filter-panel>
+<app-filter-panel></app-filter-panel>
 <main class="wrapper">
   <app-news-list></app-news-list>
   <app-button
