--- a/Homework-9/news-app/src/app/shared/dropdown/dropdown.component.css
+++ b/Homework-9/news-app/src/app/shared/dropdown/dropdown.component.css
@@ -3,3 +3,17 @@
     max-height: 200px;
     overflow-x: hidden;
 }
+
+.buttonWidth {
+  width: 130px;
+  white-space: nowrap;
+}
+
+.buttonText {
+  display: inline-block;
+  width: 90%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: sub;
+}
