--- a/Homework-9/news-app/src/app/shared/page-view/page-view.component.html
+++ b/Homework-9/news-app/src/app/shared/page-view/page-view.component.html
@@ -1,4 +1,4 @@
-  <app-header [userIsLogged]="userIsLogged"></app-header>
+  <app-header></app-header>
     <div class="content">
       <ng-content></ng-content>
     </div>
