--- a/Homework-10/news-app/src/app/pages/news-item-page/news-item-page.component.html
+++ b/Homework-10/news-app/src/app/pages/news-item-page/news-item-page.component.html
@@ -4,7 +4,7 @@
     <img src={{itemInfo.urlToImage}} alt="news image" class="card-image img-thumbnail"/>
     <div class="text-container">
       <p class="news-title">{{itemInfo.title}}</p>
-      <p class="news-description">{{itemInfo.content}}</p>
+      <p class="news-description">{{itemInfo.content || itemInfo.description}}</p>
       <p class="news-date">Date: {{itemInfo.publishedAt | dateTransformer: itemInfo.publishedAt}}</p>
       <p class="news-author">Author: {{itemInfo.author}}</p>
     </div>
